<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Xndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_u"><u>Set</u></string>
    <string name="xndroid_tip_xxnet">you can see more information in <u>XX-net</u></string>
    <string name="xndroid_browser_tip">you can use internal <u>LightningBrowser</u> without any configuration</string>
    <string name="xndroid_github">github.com/XndroidDev/Xndroid</string>
    <string name="check_update_u"><u>check update</u></string>
    <string name="about_xndroid">About Xndroid</string>
    <string name="project_home">Project home</string>
    <string name="used_these_projects">Used projects</string>
    <string name="versions">Versions</string>
    <string name="initializing">initializing…</string>
    <string name="state">state</string>
    <string name="ip_number">IP number</string>
    <string name="ip_quality">IP quality</string>
    <string name="getting">getting</string>
    <string name="xx_net_version">XX-Net version</string>
    <string name="appid">AppId</string>
    <string name="configuration">configuration</string>
    <string name="global_proxy">global proxy</string>
    <string name="certificate">Certificate</string>
    <string name="auto_scan_thread">Auto thread</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="proxy_setting">Proxy Setting</string>
    <string name="proxy_setting_tip">You need to set the proxy setting in Setting-Wlan manually if no root permission.</string>
    <string name="appid_setting">Set AppId (split with \'|\')</string>
    <string name="help">help</string>
    <string name="global_connfig">global configuration</string>
    <string name="config_tip">If you want to use XX-net in other app, you must import certification and set global proxy first.It can configurate automatically with root permission.</string>
    <string name="auto_scan">auto scan thread</string>
    <string name="auto_scan_tip">The number of Ip scan threads can be adjust automatically according to the network, power and other device information.</string>
    <string name="find_new_version">find new version </string>
    <string name="update">update</string>
    <string name="no_new_version">no new version</string>
    <string name="get_version_fail">get latest version fail!</string>
    <string name="current_latest">current version is latest</string>
    <string name="updating_xndroid">updating Xndroid</string>
    <string name="downloading_xndroid">downloading Xndroid new version</string>
    <string name="update_xndroid_to">update Xndroid to</string>
    <string name="ignore_version">ignore version</string>
    <string name="request_permission">request permission…</string>
    <string name="unzip_file">unzip files and init shell…</string>
    <string name="start_xxnet">start XX-Net…</string>
    <string name="xndroid_launching">Xndroid launching</string>
    <string name="permissions_need">permissions are needed, please approve</string>
    <string name="getting_version">getting Xndroid version…</string>
    <string name="xxnet_running">XX-Net running</string>
    <string name="no_internet">Can\'t access Internet, check your network setting!</string>
    <string name="running_normally">Everything is OK, you can access the free Internet</string>
    <string name="no_ip">No enough IP, wait to scan</string>
    <string name="no_respond">XX-Net not respond, it maybe crashed!</string>
    <string name="waitting_respond">Waiting for XX-net to respond</string>
    <string name="public_appid">(Set your own AppID!!!)</string>
    <string name="ignore">ignore</string>
    <string name="connect_no_establish">No connection</string>
    <string name="import_u"><u>Import</u></string>
    <string name="import_cert">import certification</string>
    <string name="import_cert_tip">You can turn off the screen lock and try again if a password is required.</string>
    <string name="import_ip">import IP</string>
    <string name="import_ip_tip">Chose the file named \'good_ip.txt\' generated by XX-Net in PC to import.</string>
    <string name="import_title">import</string>
    <string name="err_no_file">error:no file path!</string>
    <string name="err_file_name">error:the file name is not \'good_ip.txt\'!</string>
    <string name="import_over">Import finished, restart Xndroid to use it</string>
    <string name="teredo_state">Teredo state</string>
    <string name="unknow">UNKNOW</string>
    <string name="nat_type">NAT type</string>
    <string name="export_log">Export Logs</string>
    <string name="import_certificate">import certificate</string>
    <string name="check_update">Check Update</string>
    <string name="qualified">qualified</string>
    <string name="offline">offline</string>
    <string name="ip_changed">Teredo IP changed</string>
    <string name="ip_changed_msg">The teredo IP changed, teredo client will modify the address field of each IPV6 packet.</string>
    <string name="prepare_python">prepare environment for python…</string>
    <string name="prepare_fqrouter">prepare environment for fqrouter…</string>
    <string name="start_vpn">start vpn service, please authorize…</string>
    <string name="wait_fqrouter">waiting for fqrouter to be ready…</string>
    <string name="prepare_xxnet">prepare environment for XX-Net…</string>
    <string name="wait_xxnet">waiting for XX-Net to be ready…</string>
    <string name="log_exported">logs are exported to /sdcard/xndroid-logs.tar.gz</string>
    <string name="teredo_fail">teredo connect fail, try again later</string>
    <string name="vpn_reject">vpn request is rejected</string>
    <string name="fqrouter_exit_un">fqrouter exit unexpectedly</string>
    <string name="xxnet_exit_un">XX-Net exit unexpectedly</string>
    <string name="no_ipv6">No IPV6 connection temporarily</string>
    <string name="xxnet_timeout">wait to be ready for XX-Net timeout</string>
    <string name="fqrouter_timeout">wait to be ready for fqrouter timeout</string>
    <string name="teredo_ip">Teredo IP</string>
    <string name="fatalerror">FatalError</string>
    <string name="update_tip">click \'check update\' in the menu to update</string>
    <string name="no_root_tip">Warning: No root permission, but has run as root. It\'s suggested to clear the application data, or there may be unpredictable errors.</string>
    <string name="choose_mode">choose launch mode</string>
    <string name="choose_mode_tip">Your device is rooted, you can chose launch in vpn mode or root mode.Some functions of fqrouter is unavailable in vpn mode.</string>
    <string name="vpn_mode">VPN mode</string>
    <string name="root_mode">Root mode</string>
    <string name="only_vpn_available">Can\'t run as root, only VPN mode available.</string>
    <string name="do_not_force_stop">Launch in root mode, don\'t force stop this APP.Launch this APP in root mode and exit normally or reboot your phone, if the network is abnormal.</string>
    <string name="clear_certificate_cache">Clear Certificate Cache</string>
    <string name="set_appid_fail">Set AppId fail</string>
    <string name="restart_tip">Done, try to restart this APP.</string>
    <string name="sys_cert_no_root">Can\'t import system certificate, unless run as root.</string>
    <string name="system_cert_fail">Import system certificate fail </string>
    <string name="system_cert_succeed">Import system certificate succeed, reboot your phone if not effect in a short time </string>
    <string name="import_cert_7tip">Applications maybe don\'t trust certificates imported by user above Android 7.0 .</string>
    <string name="no_root_no_need">No root, no need.</string>
    <string name="import_system_certificate">Import System Certificate</string>
    <string name="remove_system_certificate">Remove System Certificate</string>
    <string name="import_cert_full_tip">You can turn off the screen lock and try again if a password is required.Applications maybe don\'t trust certificates imported by user above Android7.0. And it can be imported as system certificate with ROOT.</string>
    <string name="finished">finished</string>
    <string name="no_network_tip">Network is unreachable, check your network setting.</string>
    <string name="install_new_tip">Start to install the new version. The old version will de copied to \'/sdcard/xndroid-old.apk\'. Report the logs and rollback to old version if the new version is unusable. It\'s advised to exit this APP before update.</string>
    <string name="no_full_function">You can use full functions with root.</string>
    <string name="import_user_certificate">Import User Certificate</string>
    <string name="stable_b">(stable)</string>
    <string name="test_b">(test)</string>
    <string name="update_policy">update policy</string>
    <string name="update_policy_tip">Please select update policy. </string>
    <string name="notice_latest">notice latest</string>
    <string name="notice_stable">notice stable</string>
    <string name="no_update">don\'t update</string>
    <string name="update_setting">update setting</string>
    <string name="gae_idle">GAE proxy is idle</string>
    <string name="change_server"><u>change server</u></string>
    <string name="change_server_tip">leave a blank to pick a build-in server</string>
    <string name="change_teredo_server">please type teredo server</string>
    <string name="not_ip_domain">fail, not a valid IPV4 address or domain name.</string>
    <string name="available_origin_ipv6">There is origin IPv6 network, teredo will be disabled. Cancel \'auto disable teredo\' if ipv6 is unavailable</string>
    <string name="DISABLED">DISABLED</string>
    <string name="update_xxnet">Update XX-Net Offline</string>
    <string name="xxnet_update_title">Update XX-Net offline</string>
    <string name="xxnet_update_tip">Before doing this, you need to download the XX-Net zip file from https://github.com/XX-net/XX-Net/releases, and copy it to `/sdcard/XX-Net.zip`. You can also update XX-Net online by click the button in the XX-Net management page.</string>
    <string name="update_remove">update and remove data</string>
    <string name="wait_for">wait for a minute</string>
    <string name="xxnet_zip_no_find">can\'t find the XX-Net zip file.</string>
    <string name="xxnet_zip_not_complete">not a complete XX-Net zip file</string>
    <string name="xxnet_zip_unknown_version">unknown XX-Net version</string>
    <string name="update_xxnet_fail">update XX-Net fail</string>
    <string name="launch_component">choose launch component</string>
    <string name="reboot_app">restart app</string>
    <string name="auto_disable_teredo">auto disable teredo</string>
    <string name="restart_to_take_effect">* Restart to take effect.</string>
    <string name="replace_the_proxy_tip">* You may need to replace the proxy item in the fqrouter manager page.</string>
    <string name="fqdns_disabled_tip">* There may be DNS pollution if fqdns is disabled.</string>
    <string name="notification_bar">notification bar</string>
    <string name="teredo_disable_tip">* XX-Net may need teredo to access the ipv6 network.</string>
    <string name="notification_bar_disabled_tip">* The process may be killed by system if the notification bar is disabled.</string>
    <string name="reimport_cert_tip">XX-Net certification need to re-import. Please import it through Xndroid.</string>
    <string name="auto_start">auto start</string>
    <string name="launch_mode">launch mode:</string>
    <string name="notify_mode">notify mode:</string>
    <string name="launch_setting">Launch Setting</string>
</resources>