<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.xx.xndroid.XndroidFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/xndroid_xxnet_state"
               android:text="@string/initializing"
               android:layout_margin="20dp"
               android:padding="10dp"
               android:background="#b3f6b8"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/state"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="10dp"
               android:textStyle="bold"/>
           <TableLayout
               android:background="#bbb"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:padding="0.5px"
               android:shrinkColumns="1"
               android:stretchColumns="0,1,2">
               <TableRow>
                   <LinearLayout android:orientation="horizontal" style="@style/BoaderTableCell">
                       <TextView android:text="@string/ip_number"
                           android:layout_height="wrap_content"
                           android:layout_width="wrap_content"/>
                       <TextView android:text="@string/import_u"
                           android:textColor="@color/colorLinkText"
                           android:layout_marginLeft="10dp"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:id="@+id/xndroid_import_ip"/>
                   </LinearLayout>
                   <TextView android:text="@string/getting" android:id="@+id/xndroid_ip_num" style="@style/BoaderTableCell"/>
               </TableRow>
               <TableRow>
                   <TextView android:text="@string/ip_quality"  style="@style/BoaderTableCell"/>
                   <TextView android:text="@string/getting" android:id="@+id/xndroid_ip_quality" style="@style/BoaderTableCell"/>
               </TableRow>
               <TableRow>
                   <TextView android:text="@string/xx_net_version" style="@style/BoaderTableCell" />
                   <TextView android:text="@string/getting" android:id="@+id/xndroid_xxnet_version" style="@style/BoaderTableCell"/>
               </TableRow>
               <TableRow>
                   <LinearLayout android:orientation="horizontal" style="@style/BoaderTableCell">
                       <TextView android:text="@string/appid"
                           android:layout_height="wrap_content"
                           android:layout_width="wrap_content"/>
                       <TextView android:text="@string/set_u"
                           android:textColor="@color/colorLinkText"
                           android:layout_marginLeft="10dp"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:id="@+id/xndroid_set_appid"/>
                   </LinearLayout>
                   <TextView android:text="@string/getting" android:id="@+id/xndroid_appid" style="@style/BoaderTableCell"/>
               </TableRow>

           </TableLayout>
           <Space
               android:layout_width="match_parent"
               android:layout_height="20dp" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/configuration"
                   android:layout_marginBottom="10dp"
                   android:layout_marginLeft="10dp"
                   android:textStyle="bold"/>
               <ImageView
                   android:id="@+id/xndroid_config_tip"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_marginLeft="10dp"
                   android:src="@mipmap/ic_help_button"/>
           </LinearLayout>

           <TableLayout
               android:background="#bbb"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:padding="0.5px"
               android:shrinkColumns="1"
               android:stretchColumns="0,1,2">

               <TableRow>
                   <TextView android:text="@string/global_proxy"  style="@style/BoaderTableCell"/>
                   <TextView android:text="@string/set_u"
                       android:id="@+id/xndroid_proxy"
                       style="@style/BoaderTableCell"
                       android:textColor="@color/colorLinkText"/>
               </TableRow>

               <TableRow>
                   <LinearLayout
                       android:orientation="horizontal"
                       style="@style/BoaderTableCell">
                       <TextView android:text="@string/certificate"
                           android:layout_height="wrap_content"
                           android:layout_width="wrap_content"/>
                       <ImageView
                           android:id="@+id/xndroid_cert_tip"
                           android:layout_width="20dp"
                           android:layout_height="20dp"
                           android:layout_marginLeft="10dp"
                           android:src="@mipmap/ic_help_button"/>
                   </LinearLayout>
                   <TextView android:text="@string/import_u"
                       android:id="@+id/xndroid_cert"
                       style="@style/BoaderTableCell"
                       android:textColor="@color/colorLinkText"/>
               </TableRow>

               <TableRow>
                   <LinearLayout
                       android:orientation="horizontal"
                       style="@style/BoaderTableCell">
                       <TextView android:text="@string/auto_scan_thread"
                           android:layout_height="wrap_content"
                           android:layout_width="wrap_content"/>
                       <ImageView
                           android:id="@+id/xndroid_thread_tip"
                           android:layout_width="20dp"
                           android:layout_height="20dp"
                           android:layout_marginLeft="10dp"
                           android:src="@mipmap/ic_help_button"/>
                   </LinearLayout>
                   <LinearLayout
                       android:orientation="horizontal"
                       style="@style/BoaderTableCell">
                       <Switch android:id="@+id/xndroid_auto_thread"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:checked="true"/>
                   </LinearLayout>
               </TableRow>

           </TableLayout>

           <Space
               android:layout_width="match_parent"
               android:layout_height="20dp" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/xndroid_xxnet_tip"
               android:orientation="horizontal">
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:src="@mipmap/ic_tip_gray"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/xndroid_tip_xxnet"/>
           </LinearLayout>

           <Space
               android:layout_width="match_parent"
               android:layout_height="10dp" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/xndroid_browser_tip"
               android:orientation="horizontal">
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="10dp"
                   android:src="@mipmap/ic_tip_gray"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/xndroid_browser_tip"/>
           </LinearLayout>
       </LinearLayout>
    </ScrollView>

</FrameLayout>
